--- a/map/src/main/resources/application.properties
+++ b/map/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=4000
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://atlantis-mysql.c9ka2ii8u0t6.ap-northeast-2.rds.amazonaws.com:3306/atl_map?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://atl-db.c9ka2ii8u0t6.ap-northeast-2.rds.amazonaws.com:3306/atl_map?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=admin
 spring.datasource.password=03283500
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
