--- a/map/src/main/resources/application.properties
+++ b/map/src/main/resources/application.properties
@@ -19,5 +19,5 @@ spring.mail.properties.mail.debug=true
 # JWT Secret Key
 secret-key=ThisStatementIsJwtSecretKeyDoNotUseThisStatement
 
-file.path = C:/fileupload/
-file.url = http://localhost:4000/file/
+ile.path = /home/ubuntu/fileupload
+file.url = http://15.164.93.149:4000/file/
