Update for Build

--- a/map/src/main/resources/application.properties
+++ b/map/src/main/resources/application.properties
@@ -19,5 +19,5 @@ spring.mail.properties.mail.debug=true
 # JWT Secret Key
 secret-key=ThisStatementIsJwtSecretKeyDoNotUseThisStatement
 
-ile.path = /home/ubuntu/fileupload/
+file.path = /home/ubuntu/fileupload/
 file.url = http://54.180.106.122:4000/file/
