--- a/map/src/main/resources/application.properties
+++ b/map/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
 
-# JWT Secret Key
+# JWT Secret
 secret-key=ThisStatementIsJwtSecretKeyDoNotUseThisStatement
 
 file.path = /home/ubuntu/fileupload/
